--- a/arch/arm64/configs/clark_defconfig
+++ b/arch/arm64/configs/clark_defconfig
@@ -361,6 +361,8 @@ CONFIG_KSWAPD_CPU_AFFINITY_MASK=""
 # CONFIG_XEN is not set
 CONFIG_FORCE_MAX_ZONEORDER=11
 CONFIG_SECCOMP=y
+CONFIG_KEXEC=y
+CONFIG_KEXEC_HARDBOOT=y
 
 #
 # Boot options
@@ -1569,8 +1571,6 @@ CONFIG_JOYSTICK_XPAD=y
 # CONFIG_INPUT_TABLET is not set
 CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_v21 is not set
-# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C_v21 is not set
-# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_SPI_v21 is not set
 # CONFIG_TOUCHSCREEN_ADS7846 is not set
 # CONFIG_TOUCHSCREEN_AD7877 is not set
 # CONFIG_TOUCHSCREEN_AD7879 is not set
