clark: update defconfig
Change-Id: I5a9deccfb2422727ff2aa491d44202b75318b0e4

--- a/arch/arm64/configs/clark_defconfig
+++ b/arch/arm64/configs/clark_defconfig
@@ -84,6 +84,7 @@ CONFIG_IRQ_TIME_ACCOUNTING=y
 # RCU Subsystem
 #
 CONFIG_TREE_PREEMPT_RCU=y
+# CONFIG_TINY_RCU is not set
 CONFIG_PREEMPT_RCU=y
 CONFIG_RCU_STALL_COMMON=y
 CONFIG_RCU_FANOUT=64
@@ -247,7 +248,10 @@ CONFIG_IOSCHED_NOOP=y
 # CONFIG_IOSCHED_TEST is not set
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_ROW=y
+CONFIG_IOSCHED_ZEN=y
 CONFIG_IOSCHED_CFQ=y
+CONFIG_IOSCHED_FIOPS=y
+CONFIG_IOSCHED_SIO=y
 CONFIG_IOSCHED_BFQ=y
 CONFIG_CGROUP_BFQIO=y
 # CONFIG_DEFAULT_DEADLINE is not set
@@ -255,6 +259,8 @@ CONFIG_CGROUP_BFQIO=y
 # CONFIG_DEFAULT_CFQ is not set
 # CONFIG_DEFAULT_BFQ is not set
 CONFIG_DEFAULT_NOOP=y
+# CONFIG_DEFAULT_SIO is not set
+# CONFIG_DEFAULT_FIOPS is not set
 CONFIG_DEFAULT_IOSCHED="noop"
 CONFIG_UNINLINE_SPIN_UNLOCK=y
 CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
@@ -1720,6 +1726,7 @@ CONFIG_UNIX98_PTYS=y
 # CONFIG_TRACE_SINK is not set
 CONFIG_DEVMEM=y
 CONFIG_DEVKMEM=y
+CONFIG_FRANDOM=y
 
 #
 # Serial drivers
@@ -2683,6 +2690,7 @@ CONFIG_FB_MSM_MDSS_MHL3=y
 # CONFIG_FB_MSM_MDSS_MDP3 is not set
 # CONFIG_FB_MSM_MDSS_XLOG_DEBUG is not set
 CONFIG_MDSS_QUICKDRAW=y
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 # CONFIG_EXYNOS_VIDEO is not set
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 # CONFIG_LCD_CLASS_DEVICE is not set
