--- a/arch/arm64/configs/clark_defconfig
+++ b/arch/arm64/configs/clark_defconfig
@@ -138,7 +138,6 @@ CONFIG_ANON_INODES=y
 CONFIG_HAVE_UID16=y
 CONFIG_SYSCTL_EXCEPTION_TRACE=y
 CONFIG_HOTPLUG=y
-CONFIG_BRICKED_HOTPLUG=y
 CONFIG_PANIC_TIMEOUT=5
 CONFIG_EXPERT=y
 CONFIG_UID16=y
@@ -302,7 +301,7 @@ CONFIG_SMP=y
 CONFIG_SCHED_MC=y
 # CONFIG_SCHED_SMT is not set
 # CONFIG_ARCH_WANTS_CTXSW_LOGGING is not set
-CONFIG_NR_CPUS=8
+CONFIG_NR_CPUS=6
 CONFIG_HOTPLUG_CPU=y
 # CONFIG_PREEMPT_NONE is not set
 # CONFIG_PREEMPT_VOLUNTARY is not set
@@ -2660,6 +2659,7 @@ CONFIG_FB_MSM_MDSS_MHL3=y
 # CONFIG_FB_MSM_MDSS_MDP3 is not set
 # CONFIG_FB_MSM_MDSS_XLOG_DEBUG is not set
 CONFIG_MDSS_QUICKDRAW=y
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 # CONFIG_EXYNOS_VIDEO is not set
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 # CONFIG_LCD_CLASS_DEVICE is not set
@@ -3516,9 +3516,10 @@ CONFIG_DEVFREQ_GOV_USERSPACE=y
 CONFIG_DEVFREQ_GOV_CPUFREQ=y
 CONFIG_DEVFREQ_GOV_MSM_ADRENO_TZ=y
 CONFIG_MSM_BIMC_BWMON=y
+CONFIG_MSMCCI_HWMON=y
 CONFIG_DEVFREQ_GOV_MSM_GPUBW_MON=y
 CONFIG_DEVFREQ_GOV_MSM_BW_HWMON=y
-# CONFIG_DEVFREQ_GOV_MSM_CACHE_HWMON is not set
+CONFIG_DEVFREQ_GOV_MSM_CACHE_HWMON=y
 CONFIG_DEVFREQ_GOV_SPDM_HYP=y
 
 #
@@ -3613,10 +3614,12 @@ CONFIG_MSM_SHARED_HEAP_ACCESS=y
 CONFIG_MSM_SYSTEM_HEALTH_MONITOR=y
 CONFIG_QCOM_EARLY_RANDOM=y
 # CONFIG_MSM_PACMAN is not set
-CONFIG_MSM_CORE_CTL_HELPER=y
-CONFIG_MSM_PERFORMANCE=y
+# CONFIG_MSM_CORE_CTL is not set
+# CONFIG_MSM_CORE_CTL_HELPER is not set
+# CONFIG_MSM_PERFORMANCE is not set
 CONFIG_QCOM_NPA_DUMP=y
 CONFIG_KERNEL_TEXT_MPU_PROT=y
+CONFIG_BRICKED_HOTPLUG=y
 CONFIG_MMI_DEVICE_DTBS=y
 # CONFIG_MEM_SHARE_QMI_SERVICE is not set
 CONFIG_BOOTINFO=y
